--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,13 +18,29 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 
-##https¼ÓÃÜ¶Ë¿ÚºÅ 443
+server.port=7031
+server.servlet.context-path=/dear
+#
+##httpsï¿½ï¿½ï¿½Ü¶Ë¿Úºï¿½ 443
 #server.port=443
-##SSLÖ¤ÊéÂ·¾¶ Ò»¶¨Òª¼ÓÉÏclasspath:
+##SSLÖ¤ï¿½ï¿½Â·ï¿½ï¿½ Ò»ï¿½ï¿½Òªï¿½ï¿½ï¿½ï¿½classpath:
 #server.ssl.key-store=classpath:www.zhoubiyun.com.jks
-##SSLÖ¤ÊéÃÜÂë
+##SSLÖ¤ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 #server.ssl.key-store-password=2m3v4nr01g0346
-##Ö¤ÊéÀàÐÍ
+##Ö¤ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 #server.ssl.key-store-type=JKS
-##Ö¤Êé±ðÃû
+##Ö¤ï¿½ï¿½ï¿½ï¿½ï¿½
 #server.ssl.key-alias=www.zhoubiyun.com
+
+
+#ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+spring.datasource.url=jdbc:mysql://localhost:3306/web_server?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=WoAiZhouBiYun
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+## Mybatis ï¿½ï¿½ï¿½ï¿½
+# ï¿½ï¿½ï¿½ï¿½Îª com.pancm.bean Ö¸ï¿½ï¿½Êµï¿½ï¿½ï¿½ï¿½ï¿½Â·ï¿½ï¿½ï¿½ï¿½
+mybatis.typeAliasesPackage=com.zhou.bean
+# ï¿½ï¿½ï¿½ï¿½Îª classpath Â·ï¿½ï¿½ï¿½ï¿½ mapper ï¿½ï¿½ï¿½Â£ï¿½* ï¿½ï¿½ï¿½ï¿½ï¿½É¨ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ xml ï¿½Ä¼ï¿½ï¿½ï¿½
+mybatis.mapperLocations=classpath\:sql/*.xml
